# python-project-50

./: .coverage  .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: build-and-test.yml
gendiff/: __init__.py  gendiff.py
gendiff/parsers/: diff_json.py  diff_reporter.py  diff_yaml.py
gendiff/scripts/: gendiff.py  gendiff_script.py
tests/: test_gendiff.py
tests/fixtures/: file1.yml  file2.yaml  file2.yml  output_diff2_yml.txt  output_diff_yaml.txt  output_diff_yml.txt
